# gamer-catch-rust

./: .gitignore  .sonarcloud.properties  CHANGELOG.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  config.example.toml  使用說明.txt
.github/workflows/: ci.yml  deploy-web.yml  release.yml
docs/: cloudflare-pages.md  macos-signing.md
packaging/: release-notes-v0.1.0.md  release-notes-v0.1.1.md  release-notes-v0.1.2.md  release-notes-v0.2.0.md  release-notes-v0.2.1.md  release-notes-v0.2.2.md  release-notes-v0.2.3.md
scripts/: 1_首次設定.cmd  1_首次設定.command  2_開始抓取.cmd  2_開始抓取.command  3_安裝每天早上9點自動抓取.cmd  Gmail_首次授權.cmd  Gmail_首次授權.command  create-release-zip.py  generate-manual.py  install-windows-task.ps1  package-macos.sh  package-windows.ps1  run-macos.sh  run-windows.ps1  validate-package.py
src/: config.rs  gmail.rs  lib.rs  main.rs  scraper.rs  sheets.rs
tools/release-packager/: Cargo.toml
tools/release-packager/src/: archive.rs  checksum.rs  lib.rs  main.rs  manifest.rs  notary.rs
tools/release-packager/src/validation/: config.rs  mod.rs  scripts.rs
web/: README.md  angular.json  package-lock.json  package.json  wrangler.jsonc
web/functions/api/download/: [platform].ts
web/public/: _headers  _redirects
web/scripts/: verify-static-seo.mjs
web/src/: index.html  styles.scss
web/src/app/: app.config.ts  app.html  app.routes.spec.ts  app.routes.ts  app.scss  app.spec.ts  app.ts
web/src/app/core/: config-model.spec.ts  config-model.ts
web/src/app/pages/downloads/: downloads.html  downloads.scss  downloads.spec.ts  downloads.ts  release-download.service.ts
web/src/app/pages/generator/: generator-draft.ts  generator.html  generator.scss  generator.spec.ts  generator.ts
web/src/app/pages/guide/: guide.html  guide.scss  guide.spec.ts  guide.ts
web/src/app/pages/home/: home.html  home.scss  home.spec.ts  home.ts
web/src/app/shared/setup-progress/: setup-progress.html  setup-progress.scss  setup-progress.spec.ts  setup-progress.ts
