[package]
name = "gamer-catch-rust"
version = "0.2.3"
edition = "2024"
rust-version = "1.88"
description = "Scrape Bahamut rankings with Playwright, update Google Sheets, and send Gmail failure alerts"
license = "MIT"

[workspace]
members = [".", "tools/release-packager"]
resolver = "3"

[dependencies]
anyhow = "1"
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
google-sheets4 = { version = "=7.0.0", features = ["yup-oauth2-service-account"] }
lettre = { version = "0.11.22", default-features = false, features = ["builder"] }
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest"] }
playwright-rs = { version = "=0.14.1", default-features = false, features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-normalization = "0.1"
url = "2"
yup-oauth2 = { version = "=12.1.2", default-features = false, features = ["hyper-rustls", "ring", "service-account"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.1", features = ["keychain"] }
keyring-core = "1.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
keyring-core = "1.0.0"
windows-native-keyring-store = { version = "1.1.0", default-features = false }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = "thin"

# The upstream 0.14.1 resolver checks a user cache before an explicitly
# configured driver. The bundled desktop release needs its adjacent, verified
# driver to win, so we carry the minimal resolver-order patch in vendor/.
[patch.crates-io]
playwright-rs = { path = "vendor/playwright-rs" }
