[package]
name = "gamercatch-release-packager"
version = "0.2.2"
edition = "2024"
rust-version = "1.88"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde_json = "1"
sha2 = "0.10"
toml = "0.9"
unicode-normalization = "0.1"
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
